Fix sidebar scroll on mobile

--- a/website/src/styles/index.scss
+++ b/website/src/styles/index.scss
@@ -42,6 +42,7 @@
     min-width: 256px;
     padding-top: 64px + $unit;
     background: var(--background-color);
+    height: 100%;
 
     &.visible {
       transform: translateX(0);
